--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,11 @@
 	<meta name=twitter:card content=summary_large_image>
 	<meta name=twitter:title content="Novinový program: archiv hlavních zpráv českých zpravodajských serverů">
 	<meta name=twitter:description content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela.">
-	<meta name=twitter:image content="https://marcel.sulek.eu/novinovy-program/ogimage.png">
+	<meta name=twitter:image content="https://www.novinovyprogram.cz/ogimage.png">
 	<meta property=og:title content="Novinový program: archiv hlavních zpráv českých zpravodajských serverů">
 	<meta property=og:description content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela.">
-	<meta property=og:image content="https://marcel.sulek.eu/novinovy-program/ogimage.png">
+	<meta property=og:image content="https://www.novinovyprogram.cz/ogimage.png">
+	<meta name="description" content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela."/>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel='stylesheet' href='global.css'>
 	<link rel='stylesheet' href='bundle.css'>
@@ -17,15 +18,16 @@
 
 <body>
 	<script src='bundle.js'></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140844064-1"></script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        ga('create', 'UA-61560058-1', 'auto');
-        ga('send', 'pageview');
+      gtag('config', 'UA-140844064-1');
     </script>
+
     <noscript>
         Stránka nekompromisně vyžaduje Javascript.
     </noscript>
