--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
     </noscript>
     <footer>
         <p>Novinovyprogram.cz CC-BY 2019 <a href="mailto:marcel@sulek.eu">Marcel Šulek</a>. Titulky a perexy &copy; jednotliví vydavatelé. Titulní strany &copy; <a href="https://www.alza.cz/media/zpravodajstvi/18855287.htm" target="_blank">Alza.cz</a> (má nejucelenější novinový archiv v ČR, proto na ní i vedou prokliky, nejsou affiliate).</p>
-        <p>Autor je bývalý zaměstnanec Economia a.s. (Hospodářské Noviny a Aktuálně), bývalý externí spolupracovník Českého Rozhlasu (iROZHLAS) a bývalý zaměstnanec MAFRA (iDNES, MF DNES, Lidovky a Lidové Noviny). S lidma v ostatních médiích se aspoň kamarádí.</p>
+        <p>Autor je bývalý zaměstnanec Economia a.s. (Hospodářské Noviny a Aktuálně), bývalý externí spolupracovník Českého Rozhlasu (iROZHLAS) a bývalý zaměstnanec MAFRA a.s. (iDNES, MF DNES, Lidovky a Lidové Noviny). S lidma v ostatních médiích se aspoň kamarádí.</p>
         <p>V současnosti pořád externě spolupracuje s Mafrou, protože v jeho kódu se tam nikdo jiný nevyzná. Je tedy  pořád na Babišově výplatní pásce, byť už jen za tak tisícovku měsíčně, což je míň, než platí americká ambasáda za jednu demošku. Primárně ho živí létání, ale i tam se jeho šéf jmenuje <a href="https://www.alpha-aviation.aero/about" target="_blank">dost podezřele</a>.</p>
     </footer>
 </body>
