Pridano logo A.cz, presunuty ogimages do nove /assets slozky

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
 	<meta name=twitter:card content=summary_large_image>
 	<meta name=twitter:title content="Novinový program: archiv hlavních zpráv českých zpravodajských serverů">
 	<meta name=twitter:description content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela.">
-	<meta name=twitter:image content="https://www.novinovyprogram.cz/ogimage.png">
+	<meta name=twitter:image content="https://www.novinovyprogram.cz/assets/ogimage.png">
 	<meta property=og:title content="Novinový program: archiv hlavních zpráv českých zpravodajských serverů">
 	<meta property=og:description content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela.">
-	<meta property=og:image content="https://www.novinovyprogram.cz/ogimage.png">
+	<meta property=og:image content="https://www.novinovyprogram.cz/assets/ogimage.png">
 	<meta name="description" content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela."/>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel='stylesheet' href='global.css'>
