--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,12 +12,12 @@
 	<meta property=og:image content="https://www.novinovyprogram.cz/assets/ogimage.jpg">
 	<meta name="description" content="Zjistěte jakou zprávu považovaly za nejdůležitejší přední české novinové servery v jakýkoliv čas od května 2017 – a jak dlouho se zpráva na titulní pozici zdržela."/>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap&subset=latin-ext" rel="stylesheet">
-	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='bundle.css'>
+	<link rel='stylesheet' href='global.css?v=1'>
+	<link rel='stylesheet' href='bundle.css?v=1'>
 </head>
 
 <body>
-	<script src='bundle.js'></script>
+	<script src='bundle.js?v=1'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140844064-1"></script>
     <script>
