Textove upravy paticky

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,9 +33,10 @@
     </noscript>
     <footer>
         <p>Novinovyprogram.cz CC-BY 2019 Marcel Šulek (<a href="https://twitter.com/marcelsulek" target="_blank">TW</a>, <a href="https://www.facebook.com/sulekmarcel">FB</a>, <a href="mailto:marcel@sulek.eu">mail</a>). Zdrojové kódy jsou na <a href="https://github.com/veproza/novinovyprogram">GitHubu</a>, pull requesty vítány.</p>
-        <p>Titulky a perexy &copy; jednotliví vydavatelé. Titulní strany &copy; <a href="https://www.alza.cz/media/zpravodajstvi/18855287.htm" target="_blank">Alza.cz</a> (má nejucelenější novinový archiv v ČR, proto na ní i vedou prokliky, nejsou affiliate).</p>
+        <p>Titulky a perexy &copy; jednotliví vydavatelé. Titulní strany Deníku, MF DNES, Lidových Novin a Hospodářských Novin &copy; <a href="https://www.alza.cz/media/zpravodajstvi/18855287.htm" target="_blank">Alza.cz</a> (má nejucelenější novinový archiv v ČR, proto na ní i vedou prokliky, nejsou affiliate).</p>
+        <p>Metodická poznámka: redakce MF DNES a iDNES.cz, Lidových Novin a Lidovky.cz a Práva a Novinky.cz jsou na sobě nezávislé, mají vlastní vedení a odpovídají za vlastní obsah. V jednom sloupci jsou kvůli vizuálnímu zjednodušení.</p>
         <p>Autor je bývalý zaměstnanec Economia a.s. (Hospodářské Noviny a Aktuálně), bývalý externí spolupracovník Českého Rozhlasu (iROZHLAS) a bývalý zaměstnanec MAFRA a.s. (iDNES, MF DNES, Lidovky a Lidové Noviny). S lidma v ostatních médiích se aspoň kamarádí.</p>
-        <p>V současnosti pořád externě spolupracuje s Mafrou, protože v jeho kódu se tam nikdo jiný nevyzná. Je tak pořád na Babišově výplatní pásce, ale víc má i za demošky od americké ambasády. Primárně ho živí létání, ale i tam se jeho šéf jmenuje <a href="https://www.alpha-aviation.aero/about" target="_blank">dost podezřele</a>.</p>
+        <p>V současnosti pořád externě spolupracuje s Mafrou na pár IT projektech, primárně ho ale živí létání. Ale i tam se jeho šéf jmenuje <a href="https://www.alpha-aviation.aero/about" target="_blank">krajně podezřele</a>.</p>
     </footer>
 </body>
 </html>
