--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
         <p>Titulky a perexy &copy; jednotliví vydavatelé. Titulní strany Deníku, MF DNES, Lidových Novin a Hospodářských Novin &copy; <a href="https://www.alza.cz/media/zpravodajstvi/18855287.htm" target="_blank">Alza.cz</a> (má nejucelenější novinový archiv v ČR, proto na ni i vedou prokliky, nejsou affiliate).</p>
         <p>Metodická poznámka: redakce MF DNES a iDNES.cz, Lidových Novin a Lidovky.cz a Práva a Novinky.cz jsou na sobě nezávislé, mají vlastní vedení a odpovídají za vlastní obsah. V jednom sloupci jsou kvůli vizuálnímu zjednodušení.</p>
         <p>Autor je bývalý zaměstnanec Economia a.s. (Hospodářské Noviny a Aktuálně), bývalý externí spolupracovník Českého Rozhlasu (iROZHLAS) a bývalý zaměstnanec MAFRA a.s. (iDNES, MF DNES, Lidovky a Lidové Noviny). S lidmi v ostatních médiích se aspoň kamarádí.</p>
-        <p>V současnosti pořád externě spolupracuje s Mafrou na pár IT projektech, primárně ho ale živí létání. Ale i tam se jeho šéf jmenuje <a href="https://www.alpha-aviation.aero/about" target="_blank">krajně podezřele</a>.</p>
+        <p>V současnosti ho primárně živí létání, ale i tam se jeho šéf jmenuje <a href="https://www.alpha-aviation.aero/about" target="_blank">krajně podezřele</a>.</p>
     </footer>
 </body>
 </html>
